--- a/InventoryMS/MainWindow.xaml
+++ b/InventoryMS/MainWindow.xaml
@@ -64,7 +64,8 @@
                     
                     <!--Menu BUtton-->
                     <StackPanel DockPanel.Dock="Top">
-                        <Button Style="{StaticResource menuButton}" Click="DashboardButton_Click">
+                            
+                            <Button Style="{StaticResource menuButton}" Click="DashboardButton_Click">
                             <StackPanel Orientation="Horizontal">
                                 <Icon:PackIconMaterial Kind="MonitorDashboard" Style="{StaticResource menuBUttonIcon}"/>
                                 <TextBlock Text="Dashboard"/>
@@ -84,14 +85,14 @@
                                 </StackPanel>
                             </Button>
 
-                            <Button Style="{StaticResource menuButton}">
+                            <Button Style="{StaticResource menuButton}" Click="CategoryButton_Click">
                                 <StackPanel Orientation="Horizontal">
                                     <Icon:PackIconMaterial Kind="Shape" Style="{StaticResource menuBUttonIcon}"/>
                                     <TextBlock Text="Categories" Margin="5,0,5,0"/>
                                 </StackPanel>
                             </Button>
 
-                            <Button Style="{StaticResource menuButton}">
+                            <Button Style="{StaticResource menuButton}" Click="StockManagement_Click">
                                 <StackPanel Orientation="Horizontal">
                                     <Icon:PackIconMaterial Kind="Warehouse" Style="{StaticResource menuBUttonIcon}"/>
                                     <TextBlock Text="Stock Management" Margin="5,0,5,0"/>
@@ -114,7 +115,7 @@
                                 </StackPanel>
                             </Button>
 
-                            <Button Style="{StaticResource menuButton}">
+                            <Button Style="{StaticResource menuButton}" Click="OrderPurchase_Click">
                                 <StackPanel Orientation="Horizontal">
                                     <Icon:PackIconMaterial Kind="ClipboardList" Style="{StaticResource menuBUttonIcon}"/>
                                     <TextBlock Text="Purchase Orders" Margin="5,0,5,0"/>
@@ -232,25 +233,10 @@
                 </Grid.RowDefinitions>
 
                 <!--Search Textbox-->
-                <Grid Width="300" HorizontalAlignment="Left">
-                    <TextBlock Margin="20 0" VerticalAlignment="Center" Foreground="#b0b9c6" IsHitTestVisible="False"
-                               Panel.ZIndex="1" Text="Seacrh here ..."
-                               Visibility="{Binding ElementName=txtSearch, Path=Text.IsEmpty,Converter={StaticResource BoolToVis}}"/>
-
-                    <TextBox x:Name="txtSearch" Style="{StaticResource textboxSearch}"/>
-
-                    <Icon:PackIconMaterial Kind="Magnify" Width="15" Height="15" VerticalAlignment="Center"
-                                           Margin="0 0 15 0" Foreground="#b0b9c6" HorizontalAlignment="Right"/>
-                </Grid>
 
                 <!--Top Buttons-->
-                <Button Style="{StaticResource topButton}" Margin="0 0 20 0" Background="White" HorizontalAlignment="Right">
-                    <Icon:PackIconMaterial Kind="Cog"/>
-                </Button>
 
-                <Button Style="{StaticResource topButton}" Margin="0 0 55 0" HorizontalAlignment="Right">
-                    <Icon:PackIconMaterial Kind="Bell"/>
-                </Button>
+                <Button Style="{StaticResource topButton}" Margin="0 0 55 0" HorizontalAlignment="Right"/>
                 <ContentControl x:Name="MainContent" Content="MainContent" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Center" Height="600" Width="750"/>
             </Grid>
         </Grid>
